--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,14 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.bg-grey{
+  background: grey;
+}
+
+.title{
+  text-transform: capitalize;
+  color: red;
+}
+
+
